# risingstones-partyfinder-helper

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: release.local.example.json
docs/: README.md  architecture.md
docs/collaboration/: harness-engineering.md
docs/features/: nga-login-aggregation.md  nga-public-aggregation.md  partyfinder-helper.md
docs/release/: code-signing.md  desktop-tauri.md  portable-package.md
docs/userscripts/: tampermonkey.md
docs/worklog/: 2026-05-07-ff14-partyfinder-helper.md  2026-05-08-exe-portable.md  2026-05-08-gitee-update-source-config.md  2026-05-08-github-asset-mirror-diagnosis.md  2026-05-08-job-filter-and-release-source.md  2026-05-08-nga-login-aggregation.md  2026-05-08-powershell-update-script-encoding.md  2026-05-08-tauri-127-refused.md  2026-05-08-tauri-build-run.md  2026-05-08-tauri-desktop-prototype.md  (+22 more)
scripts/: build-portable.mjs  package-tauri-portable.mjs  publish-gitee-release.mjs  release-names.mjs  release-sources.mjs  run-tauri-build.mjs  validate-nga-parser.ts
server/: index.ts
src/: App.tsx  api.ts  config.ts  storage.test.ts  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
userscripts/: risingstones-response-helper.user.js
(+20 files in other folders)
