[package]
name = "risingstones-partyfinder-helper"
version = "0.1.5"
description = "FF14 国服石之家副本招募桌面筛选工具"
authors = ["RisingStones PartyFinder Helper Contributors"]
license = "MIT"
repository = "https://github.com/today080221/risingstones-partyfinder-helper"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
