[package]
name = "risingstones-partyfinder-helper"
version = "1.0.1"
description = "FF14 国服石之家副本招募桌面筛选工具"
authors = ["菜菜的橙子", "risingstones-partyfinder-helper contributors"]
license = "MIT"
repository = "https://github.com/today080221/risingstones-partyfinder-helper"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.4"
tokio = { version = "1", features = ["time"] }
